--- a/basics/index.html
+++ b/basics/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <!-- <style>
         section {
@@ -16,10 +17,10 @@
 
 <body>
     <main>
-        <section>
+        <section id="product-overview">
             <h1>Get the freedom you deserve.</h1>
         </section>
-        <section>
+        <section id="plans">
             <h1>Choose Your Plan</h1>
         </section>
     </main>
