--- a/basics/index.html
+++ b/basics/index.html
@@ -7,6 +7,7 @@
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <!-- <style>
         section {
@@ -22,6 +23,7 @@
         </section>
         <section id="plans">
             <h1 class="section-title">Choose Your Plan</h1>
+            <p>Make sure you get the most for your money!</p>
         </section>
     </main>
 </body>
